--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,3 +1,5 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
     form_themes: ['bootstrap_3_layout.html.twig']
+    paths:
+        '%kernel.project_dir%/vendor/knplabs/knp-paginator-bundle/templates': KnpPaginator
